set sibling-nav-visible class correctly and nudge the page up

--- a/app/toura/styles/_page.scss
+++ b/app/toura/styles/_page.scss
@@ -6,8 +6,8 @@
     border-bottom: 18px solid transparent;
   }
 
-  .sibling-nav-visible {
-    border-bottom: 18px solid transparent;
+  .sibling-nav-visible & {
+    border-bottom: 77px solid transparent;
   }
 
   .phone &.has-ads {
